# FastAPI-Starter-CLI

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
fastcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fastgen/: cli.py  config.py  fastgen.config.yaml
fastgen/templates/async/: config.py.jinja  database.py.jinja  main.py.jinja  setup.py.jinja
fastgen/templates/common/: alembic.ini.jinja
fastgen/templates/sync/: database.py.jinja  main.py.jinja  setup.py.jinja
fastgen/utils/: generator.py
